src/index.css
@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");

body {
  font-family: 'Roboto', 'Comic Sans MS';
}

.container {
  /* 500px is the minimum width of a chrome window */
  max-width: 500px;
  padding: 20px;
}

.habitBox {
  /* Each habit box is a flexbox */
  /* display: flex; */
  /* Vertically center the text and the checkbox */
  /* align-items: center; */
  /* Have space between the habit text and the streak text */
  /* justify-content: space-between; */
  margin: 10px;
  padding: 0 0 0 20px;
  border-style: solid;
  border-color: #4CC9F0;
  border-radius: 10px;
  /* height: 50px; */
}

.habit {
  display: flex;
  align-items: center;
  justify-content: space-between;
  /* height: 50px; */
}

.streak {
  display: flex;
}

.editHabit {
  display: flex;
  /* Vertically center the text and the checkbox */
  align-items: center;
  /* Have space between the habit text and the streak text */
  justify-content: space-between;
  padding: 0 0 10px 0;
}

.addHabitButton {
  margin: 10px;
  border-style: solid;
  border-color: #4CC9F0;
  border-radius: 10px;
  /* height: 50px; */
}

.habitText {
  overflow-wrap: break-word;
}

